--- a/lab402.html
+++ b/lab402.html
@@ -18,7 +18,7 @@
       <li>Skiing</li>
     </ul>
 
-    <h3>Places I've skiied this year</h3>
+    <h3>Places I've skied this year</h3>
     <table>
       <tr>
         <th>Ski Resort</th>
