--- a/lab501.html
+++ b/lab501.html
@@ -2,10 +2,11 @@
   <head>
     <title>This is my second web page.</title>
     <style>
-      h1 {font-family: cursive
-    font-style: italic
-    font-size: 0.8em
-    font-weight: bold
+      h1 {
+    font-family: cursive;
+    font-style: italic;
+    font-size: 0.8em;
+    font-weight: bold;
    }
     </style>
   </head>
