--- a/lab501.html
+++ b/lab501.html
@@ -3,7 +3,7 @@
     <title>This is my second web page.</title>
     <style>
       #h1 {
-    font-family: arial;
+    font-family: cursive;
     font-style: italic;
     font-size: 1.1em;
     font-weight: bold;
