--- a/lab501.html
+++ b/lab501.html
@@ -2,12 +2,7 @@
   <head>
     <title>This is my second web page.</title>
     <style>
-      #h1 {
-    font-family: cursive;
-    font-style: italic;
-    font-size: 1.1em;
-    font-weight: bold;
-   }
+      #h1 {font: cursive 2em bold}
     </style>
   </head>
   
