--- a/lab501.html
+++ b/lab501.html
@@ -2,7 +2,7 @@
   <head>
     <title>This is my second web page.</title>
     <style>
-      h1 {font: cursive 2em bold}
+      #h1 {font: cursive 2em bold;}
 
       
     </style>
