--- a/lab501.html
+++ b/lab501.html
@@ -3,7 +3,7 @@
     <title>This is my second web page.</title>
     <style>
       h1 { 
-        font: cursive 2em bold;
+        font: times 2em bold;
       }
     </style>
   </head>
