--- a/lab501.html
+++ b/lab501.html
@@ -2,9 +2,9 @@
   <head>
     <title>This is my second web page.</title>
     <style>
-      h1 { 
-        font: times 2em bold;
-      }
+      h1 { font: times 2em bold;
+           color: blue;
+         }
     </style>
   </head>
   
