--- a/lab501.html
+++ b/lab501.html
@@ -3,8 +3,8 @@
     <title>This is my second web page.</title>
     <style>
       h1 { font-family: cursive, arial, times;
-           color: blue;
-         }
+           color: blue;}
+      #thingsilike { color: blue;}
     </style>
   </head>
   
