--- a/lab501.html
+++ b/lab501.html
@@ -4,7 +4,8 @@
     <style>
       h1 { font-family: cursive, arial, times;
            color: blue;}
-      #thingsilike { color: blue;}
+      #thingsilike { color: blue;
+                   background-color: lightblue;}
     </style>
   </head>
   
