--- a/lab501.html
+++ b/lab501.html
@@ -2,10 +2,11 @@
   <head>
     <title>This is my second web page.</title>
     <style>
-      h1 { font-family: cursive, arial, times;
+      h1 { font-family: arial, times;
            color: blue;}
       #thingsilike { color: blue;
                    background-color: lightblue;}
+      p {font-family: cursive, arial, times;}
     </style>
   </head>
   
