--- a/lab501.html
+++ b/lab501.html
@@ -7,6 +7,11 @@
       #thingsilike { color: blue;
                    background-color: lightblue;}
       p {font-family: cursive, arial, times;}
+      #photo  { 
+        margin-top: 100px;
+        margin-bottom: 100px;
+        margin-right: 150px;
+        margin-left: 80px;}
     </style>
   </head>
   
