--- a/lab501.html
+++ b/lab501.html
@@ -11,9 +11,9 @@
         margin-top: 100px;
         margin-bottom: 100px;
         margin-right: 150px;
-        margin-left: 80px;}
+        margin-left: 80px;
         height: 100px;
-        width: 50%;
+        width: 50%;}
     </style>
   </head>
   
