--- a/lab501.html
+++ b/lab501.html
@@ -12,8 +12,8 @@
         margin-bottom: 100px;
         margin-right: 150px;
         margin-left: 80px;
-        height: 100px;
-        width: 50%;}
+        width: 200px;
+        height: auto;}
     </style>
   </head>
   
