--- a/lab501.html
+++ b/lab501.html
@@ -12,8 +12,7 @@
         margin-bottom: 100px;
         margin-right: 150px;
         margin-left: 80px;
-        width: 100px;
-        height: auto;}
+        height: 20%;}
     </style>
   </head>
   
