--- a/lab501.html
+++ b/lab501.html
@@ -2,14 +2,17 @@
   <head>
     <title>Web Mapping Lan.</title>
     <style>
-      h1 { font-family: arial, times; color: blue;}
-      #thingsilike { color: blue; background-color: lightblue;}
-      p {font-family: cursive, arial, times;}
+      * { font-family:arial, times;}
+      #thingsilike { color: darkgrey; background-color: grey;}
+      #ski { color: darkgrey; background-color: grey;}
+      #ski th { color: darkgrey; background-color: grey;}
+      #ski td { color:#4d216e; background-color: grey;}
+      #container {background-color: tan;}
+     
 
-      /* Apply resizing to the image inside #photo */
       #photo img { 
-        width: 200px;    /* Resize image to 200px */
-        height: auto;    /* Maintain the aspect ratio */
+        width: 200px; 
+        height: auto;
       }
     </style>
   </head>
