--- a/lab501.html
+++ b/lab501.html
@@ -3,11 +3,15 @@
     <title>Web Mapping Lan.</title>
     <style>
       * { font-family:arial, times;}
-      #thingsilike { color: darkgrey; background-color: grey;}
-      #ski { color: darkgrey; background-color: grey;}
-      #ski th { color: darkgrey; background-color: grey;}
-      #ski td { color:#4d216e; background-color: grey;}
-      #container {background-color: tan;}
+      #thingsilike { color: #383838; background-color: darkgrey;
+                     width: 150;
+                     border: 2px solid #ff8c00;}
+      #ski { color: #383838; background-color: darkgrey;
+                     width: 250;
+                     border: 2px solid #ff8c00;}
+      #ski th { color: #383838; background-color: #bfbfbf;}
+      #ski td { color:#4d216e; background-color: #bfbfbf;}
+      #container {background-color: #ffe396;}
      
 
       #photo img { 
@@ -34,7 +38,7 @@
       </div>
 
       <h3>I'm a bio major and love everything outside.</h3>
-      <p>One thing I like to do around this time of the year is ski</p>
+      <p>One thing I like to do around this time of the year is ski.</p>
 
       <div id="ski">
         <h3>Places I've skied this year</h3>
