--- a/lab502.html
+++ b/lab502.html
@@ -3,7 +3,7 @@
     <title>Web Mapping Lan.</title>
     <style>
 
-      * { font-family:arial, times;
+      * { font-family: times;
           text-align: center;}
 
       #thingsilike { color: #383838; background-color: darkgrey;
