--- a/lab503.html
+++ b/lab503.html
@@ -3,7 +3,7 @@
     <title>Web Mapping Lan.</title>
     <style>
 
-      * { font-family: times;
+      * { font-family: arial;
           text-align: center;}
 
       #thingsilike { color: #383838; 
