--- a/lab501.html
+++ b/lab501.html
@@ -2,7 +2,7 @@
   <head>
     <title>Web Mapping Lan.</title>
     <style>
-      * { font-family:arial, times;}
+      * { font-family:cursive;}
       #thingsilike { color: #383838; background-color: darkgrey;
                      width: 150;
                      border: 2px solid #ff8c00;}
