--- a/lab601.html
+++ b/lab601.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Web Mapping Lan.</title>
+    <title>Web Mapping Lab 6.</title>
     <style>
 
       * { font-family: arial;
@@ -59,6 +59,16 @@
      p {font-size:18;}
 
     </style>
+
+      <script 
+        src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js">   
+      </script>
+
+      <script>
+$(document).ready (function () {  });
+      </script>
+
+    
   </head>
   
   <body>
@@ -73,11 +83,11 @@
         <div id="thingsilike">
           <h4>Here are some things I like</h3>
           <ul>
-            <li>Hiking</li>
-            <li>Swimming</li>
-            <li>Jiu Jitsu</li>
-            <li>Cooking</li>
-            <li>Skiing</li>
+            <li><button id="click">Hiking</button></li>
+            <li><button id="click2">Swimming</button></li>
+            <li><button id="click3">Jiu Jitsu</button></li>
+            <li><button id="click4">Cooking</button></li>
+            <li><button id="click5">Skiing</button></li>
           </ul>
         </div>
 
