--- a/lab601.html
+++ b/lab601.html
@@ -83,11 +83,11 @@ $(document).ready (function () {  });
         <div id="thingsilike">
           <h4>Here are some things I like</h3>
           <ul>
-            <li><button id="click">Hiking</button></li>
-            <li><button id="click2">Swimming</button></li>
-            <li><button id="click3">Jiu Jitsu</button></li>
-            <li><button id="click4">Cooking</button></li>
-            <li><button id="click5">Skiing</button></li>
+            <li><button id="click">Click to Reveal...</button></li>
+            <li><button id="click2">Click to Reveal...</button></li>
+            <li><button id="click3">Click to Reveal...</button></li>
+            <li><button id="click4">Click to Reveal...</button></li>
+            <li><button id="click5">Click to Reveal...</button></li>
           </ul>
         </div>
 
