--- a/lab601.html
+++ b/lab601.html
@@ -65,10 +65,13 @@
       </script>
 
       <script>
-$(document).ready (function () {  });
+$(document).ready (function () {
       </script>
-
-    
+//Do this when I click button "click1"
+    $("#click1").click( function() {
+    $("click1").html("hiking");
+    });
+      });
   </head>
   
   <body>
