--- a/lab601.html
+++ b/lab601.html
@@ -69,7 +69,7 @@
 $(document).ready (function () {
 //Do this when I click button "click1"
     $("#click1").click( function() {
-    $("click1").html("hiking");
+    $("#click1").html("hiking");
     });
       });
         </script>
