--- a/lab601.html
+++ b/lab601.html
@@ -22,27 +22,27 @@
     $(document).ready(function () {
       // Do this when I click button "click1"
       $("#click1").click(function() {
-        $("#click1").html("Hiking");
+        $("#div_ctrl1").html("Hiking");
       });
 
       // Do this when I click button "click2"
       $("#click2").click(function() {
-        $("#click2").html("Swimming");
+        $("#div_ctrl2").html("Swimming");
       });
 
       // Do this when I click button "click3"
       $("#click3").click(function() {
-        $("#click3").html("Jiu Jitsu");
+        $("#div_ctrl3").html("Jiu Jitsu");
       });
 
       // Do this when I click button "click4"
       $("#click4").click(function() {
-        $("#click4").html("Cooking");
+        $("#div_ctrl4").html("Cooking");
       });
 
       // Do this when I click button "click5"
       $("#click5").click(function() {
-        $("#click5").html("Skiing");
+        $("#div_ctrl5").html("Skiing");
       });
     });
     </script>
@@ -60,11 +60,11 @@
         <div id="thingsilike">
           <h4>Here are some things I like</h4>
           <ul>
-            <li><button id="click1">Click to Reveal...</button></li>
-            <li><button id="click2">Click to Reveal...</button></li>
-            <li><button id="click3">Click to Reveal...</button></li>
-            <li><button id="click4">Click to Reveal...</button></li>
-            <li><button id="click5">Click to Reveal...</button></li>
+            <li><div id="div_ctrl1"><button id="click1">Click to Reveal...</button></div></li>
+            <li><div id="div_ctrl2"><button id="click2">Click to Reveal...</button></div></li>
+            <li><div id="div_ctrl3"><button id="click3">Click to Reveal...</button></div></li>
+            <li><div id="div_ctrl4"><button id="click4">Click to Reveal...</button></div></li>
+            <li><div id="div_ctrl5"><button id="click5">Click to Reveal...</button></div></li>
           </ul>
         </div>
 
