--- a/lab601.html
+++ b/lab601.html
@@ -8,7 +8,7 @@
       #ski th { color: #383838; background-color: #8dacb5; font-size: 30px;}
       #ski td { color:#4d216e; background-color: #bfbfbf; font-size: 30px;}
       #container {background-color: #d6d2c7;}
-      #lists {display: flex; gap: 20px; justify-content: center; margin-bottom: 50px;}
+      #lists/photo {display: flex; gap: 20px; justify-content: center; margin-bottom: 50px;}
       .caption {font-size: 8pt;}
       #photo img { width: 400px; height: auto; border: 5px solid #969187; border-radius: 100px;}
       h1 {background-color: #99a2de; border: 2px solid #969187; border-radius: 15px; padding: 10px 20px; display: inline-block;}
@@ -56,7 +56,7 @@
       <h3>I'm a bio major and love everything outside.</h3>
       <p>One thing I like to do around this time of the year is ski.</p>
 
-      <div id="lists">
+      <div id="lists/photo">
         <div id="thingsilike">
           <h4>Here are some things I like</h4>
           <ul>
@@ -93,11 +93,11 @@
             </tr>
           </table>
         </div>
-      </div>
 
       <div id="photo">
         <img src="https://github.com/WickHardison/WickHardison.github.io/blob/main/fozzy.jpg?raw=true" alt="Cute dog">
       </div>
+     </div>
 
       <p class="caption">My sister's dog; Fozzie... Not featured, my better dog; Yogi</p>
 
