--- a/miniproject2.html
+++ b/miniproject2.html
@@ -39,7 +39,7 @@
                   // check if the game has been won or lost
                   if (gameWon != true && gameLost != true) {
                     // erase the info box
-                    $("info").text(""):
+                    $("info").text("");
                 
                     // use text to get the letter that was clicked on
                     letter = $(this).text();
