--- a/miniproject2.html
+++ b/miniproject2.html
@@ -81,7 +81,7 @@
                         index = word.indexOf(letter)
                         console.log("index of word" + index);
                         word = word.substring(0, index) + " " + word.substring((index + 1))
-                        blank = blank.substring(0, index) + letter + blank.substring((index + 1)
+                        blank = blank.substring(0, index) + letter + blank.substring((index + 1))
 
                         $("#word").text(blank);
                         comsole.log("word is ", word);
