--- a/miniproject2.html
+++ b/miniproject2.html
@@ -84,7 +84,7 @@
                         blank = blank.substring(0, index) + letter + blank.substring((index + 1))
 
                         $("#word").text(blank);
-                        comsole.log("word is ", word);
+                        console.log("word is ", word);
                         console.log("blank is ", blank);
                       }
                      
