--- a/miniproject2.html
+++ b/miniproject2.html
@@ -58,7 +58,7 @@
                     } else if (! word.includes(letter)) {
                       
                       // reduce the number of remaining tries by 1
-                      tries - tries -1;
+                      tries = tries -1;
                       $("#guesses").text("Guesses left:" + tries)
 
                       // are they out of tries? then they lost!
