--- a/lab700.html
+++ b/lab700.html
@@ -1,11 +1,38 @@
 <html>
-  <header>
+  <head>
     <title> LeafletJS Page Wick H.</title>
-  </header>
 
+    <!-- LeafLetJS CSS File -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+     crossorigin=""/>
 
-  
-  <body>
+    <!-- LeafLetJS JavaScript File -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""></script>
+
+    <!-- Map Programming JavaScript -->
+    <script>
+      // Sets map zoom / coordinates
+      var map = L.map('map').setView([51.505, -0.09], 13);
+
+      // Defines tile URL for map
+      L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+      }).addTo(map);
+    </script>
+
+    <!-- Map Styling CSS -->
+    <style>
+      #map { height: 180px; }
+    </style>
     
+  </head>
+
+   <body>
+     <!-- This div is the map location in the web page -->
+     <div id="map"></div>
   </body>
 </html>
