--- a/lab700.html
+++ b/lab700.html
@@ -9,7 +9,7 @@
 
     <!-- Map Styling CSS -->
     <style>
-      #map { height: 180px; }
+      #map { height: 300px; width: 300px;}
     </style>
   </head>
 
