--- a/lab700.html
+++ b/lab700.html
@@ -24,11 +24,33 @@
 
     <!-- Map Programming JavaScript -->
     <script>
+      // Defines Map Extent
       var map = L.map('map').setView([51.505, -0.09], 13);
+
+      // Defines Map Tile URL
       L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
         maxZoom: 19,
         attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
       }).addTo(map);
+
+      // Add Point Marker To Map
+      var marker = L.marker([51.5, -0.09]).addTo(map);
+
+      // Add Circle Marker To Map
+      var circle = L.circle([51.508, -0.11], {
+      color: 'red',
+      fillColor: '#f03',
+      fillOpacity: 0.5,
+      radius: 500
+      }).addTo(map);
+
+      // Add Polygon Marker To Map
+      var polygon = L.polygon([
+      [51.509, -0.08],
+      [51.503, -0.06],
+      [51.51, -0.047]
+      ]).addTo(map);
+      
     </script>
   </body>
 </html>
