--- a/lab700.html
+++ b/lab700.html
@@ -1,4 +1,4 @@
-<html>
+  <html>
   <head>
     <title> LeafletJS Page Wick H.</title>
 
@@ -50,6 +50,17 @@
       [51.503, -0.06],
       [51.51, -0.047]
       ]).addTo(map);
+
+      // Adds Pop-Ups To Markers
+      marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
+      circle.bindPopup("I am a circle.");
+      polygon.bindPopup("I am a polygon.");
+
+      // Adds Standalone Pop-Up
+      var popup = L.popup()
+      .setLatLng([51.513, -0.09])
+      .setContent("I am a standalone popup.")
+      .openOn(map);
       
     </script>
   </body>
