--- a/lab700.html
+++ b/lab700.html
@@ -14,6 +14,9 @@
   </head>
 
   <body>
+    <!-- Title -->
+    <h1> This is a map of things in St. Lousi, MO</h1>
+    
     <!-- This div is the map location in the web page -->
     <div id="map"></div>
 
