--- a/lab700.html
+++ b/lab700.html
@@ -28,7 +28,7 @@
     <!-- Map Programming JavaScript -->
     <script>
       // Defines Map Extent
-      var map = L.map('map').setView([51.505, -0.09], 13);
+      var map = L.map('map').setView([12, 38.619, -90.269]);
 
       // Defines Map Tile URL
       L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
