--- a/lab700.html
+++ b/lab700.html
@@ -9,6 +9,7 @@
 
     <!-- Map Styling CSS -->
     <style>
+      h1 {background-color: #99a2de; border: 2px solid #969187; border-radius: 15px; margin: 0; display: block;}
       #map { height: 500px; width: 800px; margin: 0 auto; display: block;}
     </style>
   </head>
