--- a/lab700.html
+++ b/lab700.html
@@ -29,19 +29,19 @@
     <!-- Map Programming JavaScript -->
     <script>
       // Defines Map Extent
-      var map = L.map('map').setView([38.6270, -90.1994], 13);
+     var map = L.map('map').setView([38.6270, -90.1994], 13);
 
       // Defines Map Tile URL
       L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        maxZoom: 19,
-        attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+      maxZoom: 19,
+      attribution: '&copy; OpenStreetMap contributors'
       }).addTo(map);
 
       // Add Point Marker To Map
-      var marker = L.marker([51.5, -0.09]).addTo(map);
+      var marker = L.marker([38.6270, -90.1994]).addTo(map);
 
       // Add Circle Marker To Map
-      var circle = L.circle([51.508, -0.11], {
+      var circle = L.circle([38.6270, -90.1994], {
       color: 'red',
       fillColor: '#f03',
       fillOpacity: 0.5,
