--- a/lab700.html
+++ b/lab700.html
@@ -2,15 +2,15 @@
   <head>
     <title> LeafletJS Page Wick H.</title>
 
-    <!-- LeafLetJS CSS File -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-     crossorigin=""/>
+   <!-- Leaflet CSS -->
+      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+        crossorigin="" />
 
-    <!-- Map Styling CSS -->
-    <style>
-      h1 {background-color: #99a2de; border: 2px solid #969187; border-radius: 15px; margin: 0; display: block;}
-      #map { height: 500px; width: 800px; margin: 0 auto; display: block;}
+    <!-- Leaflet JS -->
+      <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+        crossorigin=""></script>
     </style>
   </head>
 
