--- a/lab700.html
+++ b/lab700.html
@@ -1,80 +1,87 @@
-  <html>
-  <head>
-    <title> LeafletJS Page Wick H.</title>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>LeafletJS Page Wick H.</title>
 
-   <!-- Leaflet CSS -->
-      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-      crossorigin=""/>
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin="" />
 
-    <!-- Leaflet JS -->
-     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-     crossorigin=""></script>
-    </style>
-  </head>
+  <!-- Style to Make Map Visible -->
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
 
-  <body>
-    <!-- Title -->
-    <h1> This is a map of things in St. Lousi, MO</h1>
-    
-    <!-- This div is the map location in the web page -->
-    <div id="map"></div>
+    h1 {
+      background-color: #99a2de;
+      padding: 10px;
+      text-align: center;
+      border: 2px solid #969187;
+      border-radius: 15px;
+    }
 
-    <!-- LeafLetJS JavaScript File -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    #map {
+      height: 500px;
+      width: 100%;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>This is a map of things in St. Louis, MO</h1>
+
+  <div id="map"></div>
+
+  <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""></script>
 
-    <!-- Map Programming JavaScript -->
-    <script>
-      // Defines Map Extent
-     var map = L.map('map').setView([38.6270, -90.1994], 13);
+  <!-- Map Setup Script -->
+  <script>
+    // Initialize Map Centered on St. Louis
+    var map = L.map('map').setView([38.6270, -90.1994], 13);
 
-      // Defines Map Tile URL
-      L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    // Load OpenStreetMap Tiles
+    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19,
       attribution: '&copy; OpenStreetMap contributors'
-      }).addTo(map);
+    }).addTo(map);
 
-      // Add Point Marker To Map
-      var marker = L.marker([38.6270, -90.1994]).addTo(map);
+    // Add Marker
+    var marker = L.marker([38.6270, -90.1994]).addTo(map);
+    marker.bindPopup("<b>Welcome to St. Louis!</b>").openPopup();
 
-      // Add Circle Marker To Map
-      var circle = L.circle([38.6270, -90.1994], {
+    // Add Circle
+    var circle = L.circle([38.63, -90.20], {
       color: 'red',
       fillColor: '#f03',
       fillOpacity: 0.5,
       radius: 500
-      }).addTo(map);
+    }).addTo(map);
+    circle.bindPopup("This is a circle.");
 
-      // Add Polygon Marker To Map
-      var polygon = L.polygon([
-      [51.509, -0.08],
-      [51.503, -0.06],
-      [51.51, -0.047]
-      ]).addTo(map);
+    // Add Polygon
+    var polygon = L.polygon([
+      [38.628, -90.21],
+      [38.626, -90.205],
+      [38.624, -90.21]
+    ]).addTo(map);
+    polygon.bindPopup("This is a polygon.");
 
-      // Adds Pop-Ups To Markers
-      marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
-      circle.bindPopup("I am a circle.");
-      polygon.bindPopup("I am a polygon.");
-
-      // Adds Standalone Pop-Up
-      var popup = L.popup()
-      .setLatLng([51.513, -0.09])
-      .setContent("I am a standalone popup.")
-      .openOn(map);
-
-      // Shows Coordinates As Pop-Up When You Click On Map
-      var popup = L.popup();
-      function onMapClick(e) {
+    // Click-to-Get-Coordinates
+    var popup = L.popup();
+    function onMapClick(e) {
       popup
         .setLatLng(e.latlng)
         .setContent("You clicked the map at " + e.latlng.toString())
-        .openOn(map);}
-      map.on('click', onMapClick);
-      
-    </script>
-  </body>
+        .openOn(map);
+    }
+    map.on('click', onMapClick);
+  </script>
+
+</body>
 </html>
