--- a/lab700.html
+++ b/lab700.html
@@ -3,30 +3,17 @@
 <head>
   <title>LeafletJS Page Wick H.</title>
 
-  <!-- Leaflet CSS -->
+  <!-- Leaflet CSS File -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
     crossorigin="" />
 
-  <!-- Style to Make Map Visible -->
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
+    body {margin: 0;font-family: Arial, sans-serif;}
+    
+    h1 {background-color: #99a2de; padding: 10px; text-align: center; border: 2px solid #969187;border-radius: 15px;}
 
-    h1 {
-      background-color: #99a2de;
-      padding: 10px;
-      text-align: center;
-      border: 2px solid #969187;
-      border-radius: 15px;
-    }
-
-    #map {
-      height: 500px;
-      width: 100%;
-    }
+    #map {height: 500px; width: 100%;}
   </style>
 </head>
 <body>
@@ -35,27 +22,27 @@
 
   <div id="map"></div>
 
-  <!-- Leaflet JS -->
+  <!-- Leaflet JavaScript File -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""></script>
-
-  <!-- Map Setup Script -->
+  
   <script>
-    // Initialize Map Centered on St. Louis
+    // Set Map Extent On St. Louis, MO
     var map = L.map('map').setView([38.6270, -90.1994], 13);
 
-    // Load OpenStreetMap Tiles
+    // Define Map Tile
     L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19,
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    // Add Marker
-    var marker = L.marker([38.6270, -90.1994]).addTo(map);
+    // Add Point Marker
+    var marker = L.marker([38.624557, -90.184965]).addTo(map);
     marker.bindPopup("<b>Welcome to St. Louis!</b>").openPopup();
+    marker.bindPopop("This is the Gateway Arch, it resides in the smallest U.S. National Park.");
 
-    // Add Circle
+    // Add Circle Marker
     var circle = L.circle([38.63, -90.20], {
       color: 'red',
       fillColor: '#f03',
@@ -64,15 +51,16 @@
     }).addTo(map);
     circle.bindPopup("This is a circle.");
 
-    // Add Polygon
+    // Add Polygon Marker Around Forest Park
     var polygon = L.polygon([
-      [38.628, -90.21],
-      [38.626, -90.205],
-      [38.624, -90.21]
+      [38.64677/-90.30066],
+      [38.63310, -90.30384],
+      [38.62874, -90.26668],
+      [38.64315, -90.26462]
     ]).addTo(map);
-    polygon.bindPopup("This is a polygon.");
+    polygon.bindPopup("This is Forest Park, it is almost double the size of Central Park in New York!!!");
 
-    // Click-to-Get-Coordinates
+    // Click To Get Coordinates
     var popup = L.popup();
     function onMapClick(e) {
       popup
