--- a/lab700.html
+++ b/lab700.html
@@ -42,13 +42,13 @@
     marker.bindPopop("This is the Gateway Arch, it resides in the smallest U.S. National Park.");
 
     // Add Circle Marker
-    var circle = L.circle([38.63, -90.20], {
+    var circle = L.circle([38.63062, -90.23483], {
       color: 'red',
       fillColor: '#f03',
       fillOpacity: 0.5,
       radius: 500
     }).addTo(map);
-    circle.bindPopup("This is a circle.");
+    circle.bindPopup("This circle is where Saint Louis University is.");
 
     // Add Polygon Marker Around Forest Park
     var polygon = L.polygon([
