--- a/lab700.html
+++ b/lab700.html
@@ -38,8 +38,7 @@
 
     // Add Point Marker
     var marker = L.marker([38.624557, -90.184965]).addTo(map);
-    marker.bindPopup("<b>Welcome to St. Louis!</b>").openPopup();
-    marker.bindPopop("This is the Gateway Arch, it resides in the smallest U.S. National Park.");
+    marker.bindPopop("<b>This is the Gateway Arch, it resides in the smallest U.S. National Park.</b>").openPopup();
 
     // Add Circle Marker
     var circle = L.circle([38.63062, -90.23483], {
