--- a/lab801.html
+++ b/lab801.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -78,7 +77,7 @@
 			map.panTo(acsDenver2021Layer.getBounds().getCenter());
 
 			// Add layer to the layercontrol
-			layerControl.addOverlay(acsDenver2021Layer. "Census 2021");
+			layerControl.addOverlay(acsDenver2021Layer, "Census 2021");
 		});
 
 		// let's try to add some remote DRCOG data
