--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -45,10 +45,10 @@
 	// right order
 	$(document).ready(function() {
 
-		// let's create our basemap! -- ##1 here
+		// Create Basemap
 		map = L.map('map').setView([0,0], 10);
 		
-		// let's add three sets of background tiles - one from OSM,  one from HOT OSM, and one from openTopoMap
+		// Add three sets of background tiles - one from OSM,  one from HOT OSM, and one from openTopoMap
 		var OSMTiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			maxZoom: 19,
 			attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
@@ -60,12 +60,12 @@
 			maxZoom: 19,
 			attribution: 'Map data: &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, <a href="http://viewfinderpanoramas.org">SRTM</a> | Map style: &copy; <a href="https://opentopomap.org">OpenTopoMap</a> (<a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a>)'});
 
-		// this is an object to keep track of our three basemaps -- ##2 here
+		// This is an object to keep track of our three basemaps
 		var baseMaps = { "OpenStreetMap" : OSMTiles,
 				"Humanitarian OSM" : HOTOSMTiles,
 				"OpenTopoMap" : OpenTopoMap };
 
-		// the control let's the user turn on / off layers -- ##3 here
+		// The control let's the user turn on / off layers
 		var layerControl = L.control.layers(baseMaps, null).addTo(map);
 
 		// Trail Data
@@ -74,13 +74,11 @@
 			layerControl.addOverlay(newLayer, "Trails");
 		});
     
-// World Hillshade
+		// World Hillshade
 		$.getJSON('https://services.arcgisonline.com/arcgis/rest/services/Elevation/World_Hillshade/MapServer/query?outFields=*&where=1%3D1&f=geojson', function(data) {
 			newLayer = L.geoJSON(data);
 			layerControl.addOverlay(newLayer, "Hillshade");
 		});
-
-	// end document ready
 	});
 
 </script>
