--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -45,14 +45,8 @@
 	// right order
 	$(document).ready(function() {
 
-		// Define the full extent of the trails
-		var trailsBounds = [
-		    [13738717.53, 3107123.12], // Southwest corner (YMin, XMin)
-		    [13783953.01, 3172505.35]  // Northeast corner (YMax, XMax)
-			];
-
-		// Initialize the map centered on the trails extent
-		var map = L.map('map').fitBounds(trailsBounds);
+		// Create Basemap
+		map = L.map('map').setView([0,0], 10);
 
 		// Add three sets of background tiles - one from OSM,  one from HOT OSM, and one from openTopoMap
 		var OSMTiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -76,8 +70,11 @@
 
 		// Trail Data
 		$.getJSON('https://services5.arcgis.com/uv9ZRM2b74388t77/arcgis/rest/services/Trail/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson', function(data) {
-			newLayer = L.geoJSON(data);
-			layerControl.addOverlay(newLayer, "Trails");
+	    	var newLayer = L.geoJSON(data);
+ 		newLayer.addTo(map);
+	
+   		 // Fit the map to the bounds of the trails layer
+ 		   map.fitBounds(newLayer.getBounds());
 		});
 	});
 
