--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -46,7 +46,7 @@
 	$(document).ready(function() {
 
 		// Create Basemap
-		map = L.map('map').setView([0,0], 10);
+		map = L.map('map').setView([35.5909, -83.4638], 10);
 
 		// Add three sets of background tiles - one from OSM,  one from HOT OSM, and one from openTopoMap
 		var OSMTiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -72,9 +72,6 @@
 		$.getJSON('https://services5.arcgis.com/uv9ZRM2b74388t77/arcgis/rest/services/Trail/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson', function(data) {
 	    	var newLayer = L.geoJSON(data);
  		newLayer.addTo(map);
-	
-   		 // Fit the map to the bounds of the trails layer
- 		   map.fitBounds(newLayer.getBounds());
 		});
 	});
 
