--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -81,6 +81,11 @@
 
 <div id="map"></div>
 
+<div id="buttons"><p>Change Basemaps</p>
+	<span class="button" id="OSMTiles">OSMTiles</span>
+     	<span class="button" id="HOTOSMTiles">HOTOSMTiles</span>
+     	<span class="button" id="OpenTopoMap">OpenTopoMap</span> 
+     </div>
 
 </body>
 </html>
