--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -13,27 +13,15 @@
 
 
 	<style>
-		html, body {
-			height: 100%;
-			margin: 0;
-		}
+		html, body {height: 100%;margin: 0;}
 		
 		#map { width:100%; height: 70%; }
 		
-		h1 { color: #3293a8;
-		     font-family: "Garamond", serif;
-		     font-size: 20px;
-		    }
+		h1 { color: #3293a8;font-family: "Garamond", serif;font-size: 20px;}
 		
-		p { font: serif 10px;
-		    color: #3293a8;
-		  }
+		p { font: serif 10px;color: #3293a8;}
 		
-		#header {
-			width: 100%;
-			margin: auto;
-			align: center;
-		}
+		#header {width: 100%;margin: auto;align: center;}
 		
 		a { text-decoration: none; color: inherit; }
 	</style>
