--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -25,74 +25,74 @@
 		
 		a { text-decoration: none; color: inherit; }
 	</style>
-
-<script>
-
-// Map Scripts
-	$(document).ready(function() {
-
-		// Create Basemap
-		map = L.map('map').setView([35.5909, -83.4638], 10);
-
-		// Add three sets of background tiles - one from OSM,  one from HOT OSM, and one from openTopoMap
-		var OSMTiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-			maxZoom: 19,
-			attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-		}).addTo(map);
-		var HOTOSMTiles = L.tileLayer('https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
-			maxZoom: 19,
-    			attribution: '© OpenStreetMap contributors, Tiles style by Humanitarian OpenStreetMap Team hosted by OpenStreetMap France'});
-		var OpenTopoMap = L.tileLayer('https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png', {
-			maxZoom: 19,
-			attribution: 'Map data: &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, <a href="http://viewfinderpanoramas.org">SRTM</a> | Map style: &copy; <a href="https://opentopomap.org">OpenTopoMap</a> (<a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a>)'});
-
-		// This is an object to keep track of our three basemaps
-		var baseMaps = { "OpenStreetMap" : OSMTiles,
-				"Humanitarian OSM" : HOTOSMTiles,
-				"OpenTopoMap" : OpenTopoMap };
-
-		// The control let's the user turn on / off layers
-		var layerControl = L.control.layers(baseMaps, null).addTo(map);
-
-		// Trail Data
-		$.getJSON('https://services5.arcgis.com/uv9ZRM2b74388t77/arcgis/rest/services/Trail/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson', function(data) {
-	    	var newLayer = L.geoJSON(data);
- 		newLayer.addTo(map);
-		});
-	});
-
-// Button Scripts
-document.getElementById('OSMTilesBtn').addEventListener('click', function() {
-    map.eachLayer(function(layer) {
-        map.removeLayer(layer);
-    });
-    OSMTiles.addTo(map);
-});
-
-document.getElementById('HOTOSMTilesBtn').addEventListener('click', function() {
-    map.eachLayer(function(layer) {
-        map.removeLayer(layer);
-    });
-    HOTOSMTiles.addTo(map);
-});
-document.getElementById('OpenTopoMapBtn').addEventListener('click', function() {
-    map.eachLayer(function(layer) {
-        map.removeLayer(layer);
-    });
-    OpenTopoMap.addTo(map);
-});
-	
-</script>
 </head>
 <body>
 
 <div id="map"></div>
 
 <div id="buttons"><p>Change Basemaps</p>
-	<span class="button" id="OSMTilesBtn">OSMTiles</span>
-     	<span class="button" id="HOTOSMTilesBtn">HOTOSMTiles</span>
-     	<span class="button" id="OpenTopoMapBtn">OpenTopoMap</span> 
+	<button class="button" id="OSMTilesBtn">OpenStreetMap</button>
+ 	<button class="button" id="HOTOSMTilesBtn">HOT OSM</button>
+	<button class="button" id="OpenTopoMapBtn">OpenTopoMap</button>
      </div>
 
 </body>
+<script>
+// Map Scripts
+	 $(document).ready(function() {
+// Initialize the map
+    var map = L.map('map').setView([35.5909, -83.4638], 10);
+
+// Define tile layers
+    var OSMTiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+    });
+
+    var HOTOSMTiles = L.tileLayer('https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution: '© OpenStreetMap contributors, Tiles style by Humanitarian OpenStreetMap Team hosted by OpenStreetMap France'
+    });
+
+    var OpenTopoMap = L.tileLayer('https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution: 'Map data: &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, <a href="http://viewfinderpanoramas.org">SRTM</a> | Map style: &copy; <a href="https://opentopomap.org">OpenTopoMap</a> (<a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a>)'
+    });
+
+// Add default tile layer
+    OSMTiles.addTo(map);
+
+// Add control for switching layers
+    L.control.layers({
+      "OpenStreetMap": OSMTiles,
+      "HOT OSM": HOTOSMTiles,
+      "OpenTopoMap": OpenTopoMap
+    }).addTo(map);
+
+// Load trail data
+    $.getJSON('https://services5.arcgis.com/uv9ZRM2b74388t77/arcgis/rest/services/Trail/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson', function(data) {
+      var trailLayer = L.geoJSON(data);
+      trailLayer.addTo(map);
+    });
+
+// Button event listeners
+    $('#OSMTilesBtn').click(function() {
+      map.removeLayer(HOTOSMTiles);
+      map.removeLayer(OpenTopoMap);
+      OSMTiles.addTo(map);
+    });
+
+    $('#HOTOSMTilesBtn').click(function() {
+      map.removeLayer(OSMTiles);
+      map.removeLayer(OpenTopoMap);
+      HOTOSMTiles.addTo(map);
+    });
+
+    $('#OpenTopoMapBtn').click(function() {
+      map.removeLayer(OSMTiles);
+      map.removeLayer(HOTOSMTiles);
+      OpenTopoMap.addTo(map);
+    });
+  });
+</script>
 </html>
