--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -60,7 +60,7 @@
     });
 
 // Add default tile layer
-    OSMTiles.addTo(map);
+    HOTOSMTiles.addTo(map);
 
 // Add control for switching layers
     L.control.layers({
