--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -28,6 +28,8 @@
 </head>
 <body>
 
+<h1>Great Smoky Mountain National Park Trails</h1>
+
 <div id="map"></div>
 
 <div id="buttons"><p>Change Basemaps</p>
