--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -64,6 +64,10 @@
 // Add default tile layer
     HOTOSMTiles.addTo(map);
 
+// Add Campsite #18 Marker
+    var marker = L.marker([35.628162, -83.705354]).addTo(map);
+    marker.bindPopup("<b>West Prong #18 Campsite.</b>").openPopup();
+
 // Load trail data
     $.getJSON('https://services5.arcgis.com/uv9ZRM2b74388t77/arcgis/rest/services/Trail/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson', function(data) {
       var trailLayer = L.geoJSON(data);
