--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -73,6 +73,7 @@
 });
 
 L.marker([35.628162, -83.705354], {icon: campIcon}).addTo(map);
+marker.bindPopup("<b>West Prong #18 Campsite.</b>").openPopup();
 
 // Load trail data
     $.getJSON('https://services5.arcgis.com/uv9ZRM2b74388t77/arcgis/rest/services/Trail/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson', function(data) {
