--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -27,7 +27,10 @@
 	</style>
 </head>
 <body>
-
+  <div id="photo">
+        <img src="https://github.com/WickHardison/WickHardison.github.io/blob/main/MountainHeader.jpg?raw=true" alt="Mountain Header">
+      </div>
+	
 <h1>Great Smoky Mountain National Park Trails</h1>
 
 <div id="map"></div>
