--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -16,8 +16,10 @@
 		html, body {height: 100%;margin: 0;}
 		
 		#map { width:50%; height: 50%; }
+
+		#photo { width:100%; height 20%; }
 		
-		h1 { color: #3293a8;font-family: "Garamond", serif;font-size: 20px;}
+		h1 { color: #3293a8;font-family: serif;font-size: 30px;}
 		
 		p { font: serif 10px;color: #3293a8;}
 		
