--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -17,7 +17,7 @@
 		
 		#map { width:50%; height: 50%; }
 
-		#photo { width:100%; height 20%; }
+		#photo img { width:100%; height 20%; }
 		
 		h1 { color: #3293a8;font-family: serif;font-size: 30px;}
 		
