--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <div id="photo">
-        <img src="https://github.com/WickHardison/WickHardison.github.io/blob/main/MountainHeader.jpg?raw=true" alt="Mountain Header">
+        <img src="https://github.com/WickHardison/WickHardison.github.io/blob/main/Header.png?raw=true" alt="Mountain Header">
       </div>
 	
 <h1>Great Smoky Mountain National Park Trails</h1>
