--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -26,6 +26,9 @@
 		#header {width: 100%;margin: auto;align: center;}
 		
 		a { text-decoration: none; color: inherit; }
+
+		body {background-color: #494f4b; }
+}
 	</style>
 </head>
 <body>
