--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -27,7 +27,7 @@
 		
 		a { text-decoration: none; color: inherit; }
 
-		body {background-color: #494f4b; }
+		body {background-color: #383b39; }
 }
 	</style>
 </head>
